fix img stretch

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -75,9 +75,10 @@ footer {
     }
 
     .badges img {
-        max-height: 30px;
-        width: 100%;
-        max-width: 200px;
+        max-width: 150px; 
+        height: auto;     
+        flex: 0 0 auto;   
     }
+    
 }
 
